FISH-6259 only with --illegal-access=debug